// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Addons|Resources Camera Icon 1`] = `
<i
  class="fa fa-camera-retro"
>
  Camera Icon
</i>
`;

exports[`Storyshots Addons|Resources Primary Large Button 1`] = `
<button
  class="btn btn-lg btn-primary"
  type="button"
>
  Primary Large Button
</button>
`;

exports[`Storyshots Addons|Resources Secondary Button 1`] = `
<button
  class="btn btn-secondary"
  type="button"
>
  Secondary Button
</button>
`;
